# rds_exporter

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
config/: default.yaml  development.yaml  production.yaml
src/: config.rs  main.rs
src/aws/: cloudwatch.rs  mod.rs  rds.rs
src/metrics/: collector.rs  mod.rs  prometheus_publisher.rs
