[package]
name = "rds_exporter"
version = "0.1.0"
edition = "2021"
description = "AWS SDK를 이용하여 CloudWatch의 RDS 메트릭을 수집하는 애플리케이션"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
aws-config = "1.5.15"
aws-sdk-cloudwatch = "1.63.0"
aws-sdk-rds = "1.76.1"
aws-smithy-types = "1.2.13"
serde = { version = "1.0.217", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4.39"
lazy_static = "1.5.0"
prometheus = "0.13.4"
thiserror = "2.0.11"
tracing = "0.1.41"
async-trait = "0.1.86"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
aws-smithy-runtime-api = "1.7.3"
warp = "0.3.7"
parking_lot = "0.12.3"
config = "0.15.8"